--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,12 @@ body{
     background-color: orange;
     flex-direction: column;
 }
+.temp{
+    width: 300px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: aliceblue;
+}
+
